--- a/2018/2018-02-09-Java模拟登录带验证码的教务系统原理详解.md
+++ b/2018/2018-02-09-Java模拟登录带验证码的教务系统原理详解.md
@@ -10,7 +10,7 @@ date: 2018-02-09 20:50:00
 
 ---
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180209Java模拟登录带验证码的教务系统原理详解/1136672-20190623123702196-673497496.png)
+![](./20180209Java模拟登录带验证码的教务系统原理详解/1136672-20190623123702196-673497496.png)
 
 ---
 
