--- a/2018/2018-03-04-Netty入门二之PC聊天室.md
+++ b/2018/2018-03-04-Netty入门二之PC聊天室.md
@@ -303,8 +303,8 @@ public class SimpleChatClient {
 
 ### 运行效果
 
-先运行 SimpleChatServer，再可以运行多个 SimpleChatClient，控制台输入文本继续测试 ![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180304Netty入门二之PC聊天室/1136672-20190623134128386-1209719502.png)
+先运行 SimpleChatServer，再可以运行多个 SimpleChatClient，控制台输入文本继续测试 ![](./20180304Netty入门二之PC聊天室/1136672-20190623134128386-1209719502.png)
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180304Netty入门二之PC聊天室/1136672-20190623134141849-1035956620.png)
+![](./20180304Netty入门二之PC聊天室/1136672-20190623134141849-1035956620.png)
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180304Netty入门二之PC聊天室/1136672-20190623134153658-844065588.png)
+![](./20180304Netty入门二之PC聊天室/1136672-20190623134153658-844065588.png)
