--- a/2018/2018-06-01-Mysql字段名与保留字冲突导致的异常解决.md
+++ b/2018/2018-06-01-Mysql字段名与保留字冲突导致的异常解决.md
@@ -11,7 +11,7 @@ date: 2018-06-01 13:50:00
 *  查看报错sql语句。问题就在这里。
 *  我是表名（字段名）与保留字冲突。
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180601Mysql字段名与保留字冲突导致的异常解决/1136672-20190623141441185-384732684.png)
+![](./20180601Mysql字段名与保留字冲突导致的异常解决/1136672-20190623141441185-384732684.png)
 
 # 二：Mysql保留字表
 
