--- a/2018/2018-08-11-Nginx服务器的使用与反向代理负载均衡.md
+++ b/2018/2018-08-11-Nginx服务器的使用与反向代理负载均衡.md
@@ -12,7 +12,7 @@ date: 2018-08-11 13:55:00
 
 Nginx是一种服务器软件，故而其最主要、最基本的功能当然是可以与服务器硬件结合，让程序员可以将程序放在Nginx服务器上，将程序发布出去，让成千上万的网民可以浏览。除此之外，Nginx是一种高性能的HTTP和反向代理服务器，同时也是一个代理邮件服务器。也就是说，我们Nginx上可以发布网站，也可以实现负载均衡的功能，还可以作为邮件服务器实现收发邮件等功能。所谓的负载均衡是指，当同时有N多用户访问我们服务器的时候，为了减少服务器压力，我们需要将用户分别引入各服务器，分担服务器的压力。
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135619438-770000773.png)
+![](./20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135619438-770000773.png)
 
 ### Nginx与其他服努器的性能比较 
 
@@ -143,11 +143,11 @@ cd /sbin
 
 ### 正向代理
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135650947-320037759.png)
+![](./20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135650947-320037759.png)
 
 ### 反向代理
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135705507-1067730794.png)
+![](./20180811Nginx服务器的使用与反向代理负载均衡/1136672-20180811135705507-1067730794.png)
 
 
 
