--- a/2018/2018-08-16-抛弃配置后的Spring终极教程.md
+++ b/2018/2018-08-16-抛弃配置后的Spring终极教程.md
@@ -213,7 +213,7 @@ private void businessService() {}  // signature
 
 执行顺序
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180816抛弃配置后的Spring终极教程/1136672-20180816124922650-335165270.png)
+![](./20180816抛弃配置后的Spring终极教程/1136672-20180816124922650-335165270.png)
 
 
 
