--- a/2018/2018-08-24-你知道Java的四种引用类型吗.md
+++ b/2018/2018-08-24-你知道Java的四种引用类型吗.md
@@ -6,7 +6,7 @@ date: 2018-08-24 18:15:00
 
 在Java中提供了四个级别的引用：强引用，软引用，弱引用和虚引用。在这四个引用类型中，只有强引用FinalReference类是包内可见，其他三种引用类型均为public，可以在应用程序中直接使用。引用类型的类结构如图所示。
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180824你知道Java的四种引用类型吗/1136672-20180824181156856-1470203680.png)
+![](./20180824你知道Java的四种引用类型吗/1136672-20180824181156856-1470203680.png)
 
 
 
@@ -19,7 +19,7 @@ StringBuffer stringBuffer = new StringBuffer("Helloword");
 ```
 
 变量str指向StringBuffer实例所在的堆空间，通过str可以操作该对象。
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180824你知道Java的四种引用类型吗/1136672-20180824181445637-260253766.png)
+![](./20180824你知道Java的四种引用类型吗/1136672-20180824181445637-260253766.png)
 
 强引用的特点：
 1. 强引用可以直接访问目标对象。
