--- a/2018/2018-08-29-Java性能优化之编程技巧总结.md
+++ b/2018/2018-08-29-Java性能优化之编程技巧总结.md
@@ -235,7 +235,7 @@ a>>=1
 
 无论使用哪种方式进行文件 I/O，如果能合理地使用缓冲，就能有效的提高I/O的性能。
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180829Java性能优化之编程技巧总结/1136672-20180829162917240-1225424014.png)
+![](./20180829Java性能优化之编程技巧总结/1136672-20180829162917240-1225424014.png)
 
 
 
