--- a/2019/2019-01-29-Redis数据结构之简单动态字符串SDS.md
+++ b/2019/2019-01-29-Redis数据结构之简单动态字符串SDS.md
@@ -41,7 +41,7 @@ struct sdshdr{
 
 用一张图来表示：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190129Redis数据结构之简单动态字符串SDS/1136672-20190125181258686-2024120115.png)
+![](./20190129Redis数据结构之简单动态字符串SDS/1136672-20190125181258686-2024120115.png)
 
 
 SDS 遵循 C 字符串以空字符结尾的惯例， 保存空字符的 1字节空间不计算在 SDS 的 len 属性里面， 并且为空字符分配额外的 1 字节空间， 以及添加空字符到字符串末尾等操作都是由 SDS 函数自动完成的， 所以这个空字符对于 SDS 的使用者来说是完全透明的。
