--- a/2019/2019-02-22-从HTTL模板引擎看软件设计原则.md
+++ b/2019/2019-02-22-从HTTL模板引擎看软件设计原则.md
@@ -14,12 +14,12 @@ date: 2019-02-22 14:34:00
 
 服务域发起动作，在执行过程中，会有一些临时状态需要存储交换，比如：Invacation，Execution，Request等，这就是会话域。
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222140949205-42991255.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222140949205-42991255.png)
 
 
 相应的，在HTTL中：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143137363-1070167212.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143137363-1070167212.png)
 
 
 - Engine 为服务域
@@ -53,7 +53,7 @@ date: 2019-02-22 14:34:00
 
 要做到这一点，就需要一个良好的框架支撑，“微核+插件”是一个不错的选择，Eclipse, Maven等知名软件都采用该体系。
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143158135-50304220.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143158135-50304220.png)
 
 
 什么是“微核+插件”？微核，即最小化核心，内核只负责插件的组装，不带任何功能逻辑，所有功能都由可替换的插件实现，
@@ -82,7 +82,7 @@ date: 2019-02-22 14:34:00
 
 
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143215701-880676701.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143215701-880676701.png)
 
 
 比如，HTTL的入口类Engine的实例也是一个插件，它负责模板的缓存，加载，解析的总调度，即你可以替换DefaultEngine实现。
@@ -108,12 +108,12 @@ date: 2019-02-22 14:34:00
 
 稳定度与抽象度关系如下图：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143233714-1062082905.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143233714-1062082905.png)
 
 
 也就是分包应该如下：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143246231-7868053.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143246231-7868053.png)
 
 
 其中上面那个包不依赖其它包。所以它很稳定，应尽量把抽象类或接口放在这一层，
@@ -137,7 +137,7 @@ date: 2019-02-22 14:34:00
 
 应该保持偏差越小越好，即下图所示交点都落在绿色反比线左右：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143302854-1321971393.gif)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143302854-1321971393.gif)
 
 
 基于上面的原则，HTTL的包结构整体上划分为三层：(对应上面类图中的三列)
@@ -156,7 +156,7 @@ date: 2019-02-22 14:34:00
 
 下图是HTTL所有包的不稳定度与抽象度的比值距阵：(下图为JDepend绘制)
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190222从HTTL模板引擎看软件设计原则/1136672-20190222143324901-125689761.png)
+![](./20190222从HTTL模板引擎看软件设计原则/1136672-20190222143324901-125689761.png)
 
 
 HTTL所有核心包都是靠近反比线的，即上图中用绿色标识的点，表示分包是合理的。
