--- a/2019/2019-04-11-是时候理解下HTTPS的原理及流程了.md
+++ b/2019/2019-04-11-是时候理解下HTTPS的原理及流程了.md
@@ -6,13 +6,13 @@ date: 2019-04-11 13:39:00
 
 **HTTP**协议是Hyper Text Transfer Protocol（超文本传输协议），位于TCP/IP模型当中的应用层。HTTP协议通过请求/响应的方式，在客户端和服务端之间进行通信。HTTP协议的信息传输完全以明文的方式，不做任何加密，相当于在网络上“裸奔”，所以容易遭受中间人的恶意截获甚至篡改（中间人攻击）。
 
-![640?wx_fmt=png](/Users/yueshutong/Downloads/md/2019/LOCAL/20190411是时候理解下HTTPS的原理及流程了/640?wx_fmt=png)
+![640?wx_fmt=png](./20190411是时候理解下HTTPS的原理及流程了/640?wx_fmt=png)
 
 ### 2.什么是HTTPS协议？
 
 **HTTPS**（全称：Hyper Text Transfer Protocol over Secure Socket Layer），是以安全为目标的HTTP通道，简单讲是HTTP的安全版。即HTTP下加入SSL层，HTTPS的安全基础是SSL，因此加密的详细内容就需要SSL。
 
-![img](/Users/yueshutong/Downloads/md/2019/LOCAL/20190411是时候理解下HTTPS的原理及流程了/731178-20150909141948981-713077090.png)
+![img](./20190411是时候理解下HTTPS的原理及流程了/731178-20150909141948981-713077090.png)
 
 ### 3.对称加密和非对称加密
 
