--- a/2019/2019-05-29-童年爱情故事凉拌青丝著.md
+++ b/2019/2019-05-29-童年爱情故事凉拌青丝著.md
@@ -2,7 +2,7 @@
 title: 《童年爱情故事》凉拌青丝著
 date: 2019-05-29 15:54:00
 ---
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190529童年爱情故事凉拌青丝著/1136672-20190825234116894-1038627855.png)
+![](./20190529童年爱情故事凉拌青丝著/1136672-20190825234116894-1038627855.png)
 
 > 时间：2014-08-10 20:04
 > 作者：凉拌青丝
