--- a/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
+++ b/2019/2019-08-31-基于知识图谱的医疗诊断系统论文.md
@@ -30,7 +30,7 @@ date: 2019-08-31 13:46:00
 
 本系统需要用户输入个人信息（年龄、性别、职业、提供的症状词），系统根据用户年龄、性别、症状等个人信息进行算法分析、统计、排除、排序、得出相关性得分，最后将算法分析结果反馈给用户。关于算法的设计细节，本申报书的创新性部分会详细说明。项目的大致流程图如图一所示：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133728550-144632659.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133728550-144632659.png)
 
 
 ​					 图一：系统运行流程图
@@ -46,7 +46,7 @@ date: 2019-08-31 13:46:00
 知识图谱可以大致概括为节点与关系的组成图谱，非常有助于本项目对医疗数据的分析与研究。关于知识图谱的节点设计，我们抽取医疗知识库中的全部症状词与全部疾病词构成了知识图谱的全部节点，这部分数据也成为了本项目的医学词典。每个节点都有许多属性，包括科室、症状、病因、并发症、治疗、预防等，但这些属性都是以长文本的形式存储，医学命名实体并没有被单独标注区分。前面已经说明，研究的主要方向是针对疾病与症状的联系，我们利用医学词典对疾病的症状属性进行分词。由此症状节点与疾病节点有了直接的关联，此时的节点知识图谱如图二所示：
 
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133741021-1014071427.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133741021-1014071427.png)
 
 
 
@@ -56,13 +56,13 @@ date: 2019-08-31 13:46:00
 
 如何基于这种复杂的知识图谱研究出一套科学的智能诊断算法是本系统的核心与关键。前面已经提到，系统在诊断之前需要用户提供症状、年龄、性别等信息，当获取用户提供的本系统医学词典范围内的症状词后，系统会马上根据症状词获取此症状的知识图谱，假设用户提供了“头痛”与“恶心”两个症状词，此时的知识图谱如图三、图四所示：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133803170-362520587.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133803170-362520587.png)
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133810089-787226668.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831133810089-787226668.png)
 
 由知识图谱可以看到指向它们自身的节点，也就是导致这两个症状的疾病是存在共同之处的。当我们把这两张知识图谱合二为一后，此时的知识图谱如图五所示：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831134521288-1118754837.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831134521288-1118754837.png)
 
 
 该方法到此正式分析出了引起用户症状的“病因”，但此刻获取的疾病结果还是有些笼统，存在一些误差，这些误差来源于每个人的性别、年龄、职业等具体的个人特征，因此需要进一步的提升诊断准确率。
@@ -89,7 +89,7 @@ date: 2019-08-31 13:46:00
 
 本系统在开发过程中，涉及到的技术与框架繁多，为了使各个业务系统分离，使用微服务架构，为了进一步提高系统并发量与高可用，使用分布式技术。系统架构如图六所示：
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190831基于知识图谱的医疗诊断系统论文/1136672-20190831134535079-1296187942.png)
+![](./20190831基于知识图谱的医疗诊断系统论文/1136672-20190831134535079-1296187942.png)
 
 
 (1)针对支撑知识图谱的Neo4j数据库、支撑快速检索医学词典的Elastic Search数据库与提供医学知识库的MySQL数据库，为了进一步提升三个数据库的读写能力，使用分布式架构，将三者有关的功能模块进行分离。
