--- a/2019/2019-09-18-WAP自助建站我编程之路的启蒙.md
+++ b/2019/2019-09-18-WAP自助建站我编程之路的启蒙.md
@@ -8,11 +8,11 @@ date: 2019-09-18 13:41:00
 
 不知是偶然还是“冥冥定数”，最后一次访问娃派建站（wap.ai）已有数十月之久了，突然心血来潮想看看曾经的建站启蒙平台如今是怎样。然后看到的确实一个稍显伤感的话题，Ta宣布关闭了；
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l17jw1zj309g064wer.jpg)
+![](./20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l17jw1zj309g064wer.jpg)
 
 可能娃派建站算不上移动互联网发展初期的佼佼者，但对于飞鸟来说，有着非凡的意义。
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l1c5ywbj30ky0epgmy.jpg)
+![](./20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l1c5ywbj30ky0epgmy.jpg)
 
 作为一个从城镇读书出来的孩子，似乎在接触PC、互联网上就比大城市里的孩子晚了许多。如果说网吧教会了我计算机是如此神奇的东西，那么娃派建站就是让我了解到“原来网站是每个人都有机会去搭建的”启蒙者。
 
@@ -22,7 +22,7 @@ date: 2019-09-18 13:41:00
 
 很显然，初次注册那个平台也是个小团队搞得，用户体验极差。但一旦接触这个圈子就很快就能了解到更多的讯息，很快就知道有个平台叫思图建站（后来更名为娃派），虽然也有挺多广告，但最终飞鸟在这个平台费的心血最多；加上当时正在流行“QQ刷钻”技术，于是就做了个黑域网hyw.wap.ai（很中二的感觉，此刻该网站还可以访问，不过很快就会消失了）
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l1s8x7dj30cj0fngm8.jpg)
+![](./20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73l1s8x7dj30cj0fngm8.jpg)
 
 记得当时也是废寝忘食的调整页面布局，发布文章。之后又逐渐了解到这是一个叫“柯林建站”的程序，娃派只不过是购买了一个企业版，将子站免费提供给用户，同时又提供独立域名绑定等VIP增值服务来获取利润。
 
@@ -46,4 +46,4 @@ date: 2019-09-18 13:41:00
 
 很遗憾的是，当时接触的这些也仅仅是启蒙，没有条件也没有下定决心去学编程。
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73m6rnzupj317m0h478j.jpg)
+![](./20190918WAP自助建站我编程之路的启蒙/006y8mN6ly1g73m6rnzupj317m0h478j.jpg)
