--- a/2019/2019-10-08-大型网站架构模式核心原理与新浪微博案例分析.md
+++ b/2019/2019-10-08-大型网站架构模式核心原理与新浪微博案例分析.md
@@ -103,7 +103,7 @@ date: 2019-10-08 14:57:00
 
 这样简单的架构无法支撑新浪微博快速发展的业务需求，随着访问用户的逐渐增加，系统不堪重负。新浪微博的架构在较短时间内几经重构，最后形成现在的架构，如图所示。
 
-![图片来源网络](/Users/yueshutong/Downloads/md/2019/LOCAL/20191008大型网站架构模式核心原理与新浪微博案例分析/006y8mN6ly1g7qs5wivpoj30d207igpg.jpg)
+![图片来源网络](./20191008大型网站架构模式核心原理与新浪微博案例分析/006y8mN6ly1g7qs5wivpoj30d207igpg.jpg)
 
 系统**分为三个层次**，最下层是基础服务层，提供数据库、缓存、存储、搜索等数据服务，以及其他一些基础技术服务，这些服务支撑了新浪微博的海量数据和高并发访问，是整个系统的技术基础。
 中间层是平台服务和应用服务层，新浪微博的核心服务是微博、关系和用户，它们是新浪微博业务大厦的支柱。这些服务被分割为独立的服务模块，通过依赖调用和共享基础数据构成新浪微博的业务基础。
