--- a/2020/2020-02-03-逐行解读HashMap源码.md
+++ b/2020/2020-02-03-逐行解读HashMap源码.md
@@ -120,7 +120,7 @@ static class Node<K, V> implements Map.Entry<K, V> {
 
 它包含了四个字段，从 next 字段我们可以看出 Node 是一个链表。即数组中的每个位置被当成一个桶，一个桶存放一个链表。HashMap 使用链地址法来解决哈希冲突，即同一个链表中存放**哈希值和散列桶取模运算结果相同**的 Node。HashMap 存储结构如下图所示：
 
-![](/Users/yueshutong/Downloads/md/2020/LOCAL/20200203逐行解读HashMap源码/007ZVq6cly1gas0h91ipbj31420ro0v1.jpg)
+![](./20200203逐行解读HashMap源码/007ZVq6cly1gas0h91ipbj31420ro0v1.jpg)
 
 ## 四、HashMap静态属性
 
@@ -245,7 +245,7 @@ static final int tableSizeFor(int cap) {
 
 下面用一张图举例说明一下：
 
-![](/Users/yueshutong/Downloads/md/2020/LOCAL/20200203逐行解读HashMap源码/007ZVq6cly1gas0h99igwj30pm0w876r.jpg)
+![](./20200203逐行解读HashMap源码/007ZVq6cly1gas0h99igwj30pm0w876r.jpg)
 
 该算法的最后再让结果值 n + 1，所得即为 2 的整数次幂。为了让结果使结果大于等于参数 cap ，在算法开始时，令 cap - 1。
 
@@ -393,7 +393,7 @@ hash2 =  0000 0000 0000 0000 0000 0000 0001 1111
 
 hash1 和 hash2 经过桶下标公式重新计算之后，hash1的结果不变，所以依旧在原来的桶里；而 hash2 的结果比原来多了 1 位，即 2^4 = 16，也就是偏移了原来的容量大小。如下图所示：
 
-![图片来源于网络](/Users/yueshutong/Downloads/md/2020/LOCAL/20200203逐行解读HashMap源码/007ZVq6cly1gas0h9hc6zj30h909taay.jpg)
+![图片来源于网络](./20200203逐行解读HashMap源码/007ZVq6cly1gas0h9hc6zj30h909taay.jpg)
 
 因此，在扩充 HashMap 的时候，不需要重新计算 hash，只需要检查二进制 hash 中与二进制桶下标中新增的有效位的位置相同的那个位（以下简称“新增位”）是 0 还是 1 即可，是 0 的话索引没变，是 1 的话索引变成“原索引+oldCap”。
 
