--- a/2018/2018-07-26-在浏览器运行JS脚本实现博客园文章批量删除.md
+++ b/2018/2018-07-26-在浏览器运行JS脚本实现博客园文章批量删除.md
@@ -12,4 +12,4 @@ date: 2018-07-26 11:18:00
 	});
 	window.location.reload();
 ```
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180726在浏览器运行JS脚本实现博客园文章批量删除/1136672-20180726141717951-287924390.jpg)
+![](./20180726在浏览器运行JS脚本实现博客园文章批量删除/1136672-20180726141717951-287924390.jpg)
