--- a/2018/2018-09-12-破解超星泛雅网课实现自动播放下一节.md
+++ b/2018/2018-09-12-破解超星泛雅网课实现自动播放下一节.md
@@ -80,4 +80,4 @@ btn.click(function () {
 
 **最终效果**：
 
-![](/Users/yueshutong/Downloads/md/2018/LOCAL/20180912破解超星泛雅网课实现自动播放下一节/1136672-20180912135541678-1936898309.png)
+![](./20180912破解超星泛雅网课实现自动播放下一节/1136672-20180912135541678-1936898309.png)
