--- a/2019/2019-01-10-CAP理论与分布式事务解决方案.md
+++ b/2019/2019-01-10-CAP理论与分布式事务解决方案.md
@@ -4,7 +4,7 @@ date: 2019-01-10 17:47:00
 ---
 微服务系统所设计的系统是分布式系统。分布式系统有一个著名的CAP理论，即同时满足“一致性”“可用性”和“分区容错”是一件不可能的事。CAP理论是由Eric Brewer在2000年PODC会议上提出的，该理论在两年后被证明成立。CAP理论告诉架构师不要妄想设计出同时满足三者的系统，应该有所取舍，设计出适合业务的系统。CAP理论示意图
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190110CAP理论与分布式事务解决方案/1136672-20190110174933444-109435760.png)
+![](./20190110CAP理论与分布式事务解决方案/1136672-20190110174933444-109435760.png)
 
 
 
@@ -32,7 +32,7 @@ public void updata() throws RuntimeException{
 
 如果是微服务架构，账户是一个服务，而商品是一个服务，这时不能用数据库自带的事务，因为这两个数据表不在一个数据库中。因此常常用到两阶段提交，两阶段提交的过程如图所示
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190110CAP理论与分布式事务解决方案/1136672-20190110174627718-1484547094.png)
+![](./20190110CAP理论与分布式事务解决方案/1136672-20190110174627718-1484547094.png)
 
 
 第一阶段，service-account 发起一个分布式事务，交给事务协调器TC处理，事务协调器TC向所有参与的事务的节点发送处理事务操作的准备操作。所有的参与节点执行准备操作，将 Undo 和 Redo 信息写进日志，并向事务管理器返回准备操作是否成功。
@@ -51,7 +51,7 @@ public void updata() throws RuntimeException{
     3.DoCommit阶段
     这个阶段就是事务的真正提交。如果所有的参与者都向协调者发送了ACK响应，那么协调者就会完成事务，否则中断事务。
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190110CAP理论与分布式事务解决方案/1136672-20190317205602396-1108016896.jpg)
+![](./20190110CAP理论与分布式事务解决方案/1136672-20190317205602396-1108016896.jpg)
 
 三阶段提交的方案引入对参与者的超时机制，相比两阶段提交只有协调者拥有超时机制，三阶段提交解决了协调者突然挂掉引起的参与者一直阻塞的问题。
 
