--- a/2019/2019-05-26-博客园如何嵌入网易云音乐播放器.md
+++ b/2019/2019-05-26-博客园如何嵌入网易云音乐播放器.md
@@ -4,11 +4,11 @@ date: 2019-05-26 18:01:00
 ---
 今天突然想在自己的博客上插入一首背景音乐，各大音乐厂商都有外链提供，比如网易云音乐，在歌曲的网页版就可以找到外链生成的按钮，如图所示：
 
-![1558864098351](/Users/yueshutong/Downloads/md/2019/LOCAL/20190526博客园如何嵌入网易云音乐播放器/VEqfm9.jpg)
+![1558864098351](./20190526博客园如何嵌入网易云音乐播放器/VEqfm9.jpg)
 
 点击生成外链，跳转到下面的页面
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190526博客园如何嵌入网易云音乐播放器/VEqrF0.jpg)
+![](./20190526博客园如何嵌入网易云音乐播放器/VEqrF0.jpg)
 
 当你兴冲冲复制html代码到你的博客园，发现是不生效的，因为博客园是不支持 iframe 标签的。所以，你需要动动你的小脑筋。
 
