--- a/2019/2019-08-10-周末观影三次称帝终生囚徒末代皇帝.md
+++ b/2019/2019-08-10-周末观影三次称帝终生囚徒末代皇帝.md
@@ -4,7 +4,7 @@ date: 2019-08-10 23:38:00
 ---
 > 《末代皇帝》（The Last Emperor）是一部由意大利、英国、中国大陆合作拍摄的历史传记电影。影片讲述最后一位中国皇帝溥仪的故事。溥仪一生命途多舛，经历清朝灭亡、张勋复辟、军阀混战、满洲复国及文化大革命等历史，由九五之尊降为阶下囚，对应20世纪中国的一甲子岁月。本影片获得1987年奥斯卡金像奖九项大奖。  ---维基百科
 
-![](/Users/yueshutong/Downloads/md/2019/LOCAL/20190810周末观影三次称帝终生囚徒末代皇帝/21b9211eb1094af360842472018db634286646.jpg)
+![](./20190810周末观影三次称帝终生囚徒末代皇帝/21b9211eb1094af360842472018db634286646.jpg)
 
 周末闲暇之时，抖音刷到了《末代皇帝》的片段，被其深深吸引。 
 
