--- a/2018/2018-03-01-从一个例子入门Mysql储存过程.md
+++ b/2018/2018-03-01-从一个例子入门Mysql储存过程.md
@@ -4,7 +4,7 @@ date: 2018-03-01 12:45:00
 ---
 #### 例子
 
-```javascript
+```sql
 -- 秒杀执行存储过程
 DELIMITER $$ -- 将分隔符; 转换为 $$
 -- 定义存储过程
@@ -77,7 +77,7 @@ select @r_result;
 >*  比如: `IN number INT`
 >*  例子：
 
-```javascript
+```sql
 DELIMITER //
   CREATE PROCEDURE myproc(OUT s int)
     BEGIN
@@ -89,14 +89,14 @@ DELIMITER ;
 
 #### 2.Mybatis调用储存过程
 
-```javascript
-    <!-- statementType 声明指向的是什么类型，其中CALLABLE是执行存储过程和函数的-->
-    <select id="killByProcedure" parameterType="map" statementType="CALLABLE">
-        call execute_seckill(
-            #{seckillId,jdbcType=BIGINT,mode=IN},
-            #{phone,jdbcType=BIGINT,mode=IN},
-            #{killTime,jdbcType=TIMESTAMP,mode=IN},
-            #{result,jdbcType=INTEGER,mode=OUT}
-        )
-    </select>
+```xml
+<!-- statementType 声明指向的是什么类型，其中CALLABLE是执行存储过程和函数的-->
+<select id="killByProcedure" parameterType="map" statementType="CALLABLE">
+    call execute_seckill(
+        #{seckillId,jdbcType=BIGINT,mode=IN},
+        #{phone,jdbcType=BIGINT,mode=IN},
+        #{killTime,jdbcType=TIMESTAMP,mode=IN},
+        #{result,jdbcType=INTEGER,mode=OUT}
+    )
+</select>
 ```
