--- a/2018/2018-03-04-Netty入门二之PC聊天室.md
+++ b/2018/2018-03-04-Netty入门二之PC聊天室.md
@@ -9,7 +9,7 @@ Netty4.X下载地址：[http://netty.io/downloads.html](http://netty.io/download
 
 **1.SimpleChatServerHandler.java**
 
-```javascript
+```java
 package cn.zyzpp.netty4.service;
 
 import io.netty.channel.Channel;
@@ -107,7 +107,7 @@ public class SimpleChatServerHandler extends SimpleChannelInboundHandler<String>
 
 >*  SimpleChatServerInitializer 用来增加多个的处理类到 ChannelPipeline 上，包括编码、解码、SimpleChatS   erverHandler 等。
 
-```javascript
+```java
 package cn.zyzpp.netty4.service;
 
 import io.netty.channel.ChannelInitializer;
@@ -140,7 +140,7 @@ public class SimpleChatServerInitializer extends ChannelInitializer<SocketChanne
 
 >*  编写一个 main() 方法来启动服务端。
 
-```javascript
+```java
 package cn.zyzpp.netty4.service;
 
 import io.netty.bootstrap.ServerBootstrap;
@@ -200,7 +200,7 @@ public class SimpleChatServer {
 
 >*  客户端的处理类比较简单，只需要将读到的信息打印出来即可
 
-```javascript
+```java
 package cn.zyzpp.netty4.client;
 
 import io.netty.channel.ChannelHandlerContext;
@@ -222,7 +222,7 @@ public class SimpleChatClientHandler extends SimpleChannelInboundHandler<String>
 
 >*  与服务端类似
 
-```javascript
+```java
 package cn.zyzpp.netty4.client;
 
 import io.netty.channel.ChannelInitializer;
@@ -253,7 +253,7 @@ public class SimpleChatClientInitializer extends ChannelInitializer<SocketChanne
 
 >*  编写一个 main() 方法来启动客户端。
 
-```javascript
+```java
 package cn.zyzpp.netty4.client;
 
 import java.io.BufferedReader;
