--- a/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
+++ b/2018/2018-03-16-MySQL常用SQL语句函数存储过程.md
@@ -2,7 +2,7 @@
 title: MySQL常用SQL语句/函数/存储过程
 date: 2018-03-16 12:18:00
 ---
-**一句话总结**
+一句话总结
 
 ```
 SELECT count(*) FROM user WHERE id>0 GROUP BY name HAVING count(*)>1 ORDER BY count（*）DESC;<br />
@@ -12,44 +12,44 @@ SELECT count(*) FROM user WHERE id>0 GROUP BY name HAVING count(*)>1 ORDER BY co
 
 # 1.数据库
 
-```javascript
+```sql
 /*查看已有数据库*/
 SHOW DATABASES;
 ```
 
-```javascript
+```sql
 /*创建数据库*/
 CREATE DATABASE table_name;
 ```
 
-```javascript
+```sql
 /*查看表结构*/
 SHOW COLUMNS FROM table_name;
 ```
 
-```javascript
+```sql
  /*使用数据库*/
 USE dataBase_name;
 ```
 
-```javascript
+```sql
 /*删除数据库*/
 DROP DATABASE table_name;
 ```
 
 # 2.数据表
 
-```javascript
+```sql
 /*查看已有数据表*/
 SHOW TABLES;
 ```
 
-```javascript
+```sql
 /*删除数据表*/
 DROP TABLE table_name ;
 ```
 
-```javascript
+```sql
 /*创建数据表*/
 CREATE TABLE IF NOT EXISTS `runoob_tbl`(
    `runoob_id` INT UNSIGNED AUTO_INCREMENT,
@@ -64,14 +64,14 @@ CREATE TABLE IF NOT EXISTS `runoob_tbl`(
 
 如果数据是字符型，必须使用单引号或者双引号，如：&rdquo;value&rdquo;
 
-```javascript
+```sql
 /*插入语句*/
 INSERT INTO table_name ( field1, field2,...fieldN )
                        VALUES
                        ( value1, value2,...valueN );
 ```
 
-```javascript
+```sql
 /*查询语句*/
 SELECT column_name,column_name
 FROM table_name
@@ -81,14 +81,14 @@ LIMIT n OFFSET m
 
 LIMIT 限制条数 OFFSET 起始位置
 
-```javascript
+```sql
 /*更新语句*/
 UPDATE table_name 
 SET field1=new-value1, field2=new-value2
 [WHERE clause]
 ```
 
-```javascript
+```sql
 /*删除语句*/
 DELETE FROM table_name 
 [WHERE Clause]
@@ -96,7 +96,7 @@ DELETE FROM table_name
 
 # 4.where子句
 
-```javascript
+```sql
 SELECT field1, field2,...fieldN 
 FROM table_name
 WHERE field1 ='somevalue1' [AND [OR]] filed2 = 'somevalue'
@@ -104,7 +104,7 @@ WHERE field1 ='somevalue1' [AND [OR]] filed2 = 'somevalue'
 
 **实例**
 
-```javascript
+```sql
  SELECT * from runoob_tbl  WHERE runoob_author = 'Mary';
 ```
 
@@ -112,14 +112,14 @@ WHERE field1 ='somevalue1' [AND [OR]] filed2 = 'somevalue'
 
 你可以使用 ASC 或 DESC 关键字来设置查询结果是按升序或降序排列。 默认情况下，它是按升序排列
 
-```javascript
+```sql
 SELECT field1, field2,...fieldN table_name1, table_name2...
 ORDER BY field1, [field2...][ASC [DESC]]
 ```
 
 **实例**
 
-```javascript
+```sql
 SELECT * from runoob_tbl ORDER BY submission_date ASC;
 ```
 
@@ -128,7 +128,7 @@ SELECT * from runoob_tbl ORDER BY submission_date ASC;
 SQL LIKE 子句中使用百分号 %字符来表示任意字符，类似于UNIX或正则表达式中的星号 *。 
 如果没有使用百分号 %, LIKE 子句与等号 = 的效果是一样的。`LIKE '%ABC'`
 
-```javascript
+```sql
 SELECT field1, field2,...fieldN 
 FROM table_name
 WHERE field1 LIKE condition1 [AND [OR]] filed2 = 'somevalue'
@@ -136,7 +136,7 @@ WHERE field1 LIKE condition1 [AND [OR]] filed2 = 'somevalue'
 
 **实例**
 
-```javascript
+```sql
  SELECT * from runoob_tbl  WHERE runoob_author LIKE '%Mary';
 ```
 
@@ -146,7 +146,7 @@ GROUP BY 语句根据一个或多个列对结果集进行分组。
 
 在分组的列上我们可以使用 COUNT, SUM, AVG,等函数。
 
-```javascript
+```sql
 SELECT column_name, function(column_name)
 FROM table_name
 WHERE column_name operator value
@@ -155,13 +155,13 @@ GROUP BY column_name;
 
 **实例**
 
-```javascript
+```sql
 SELECT name, COUNT(*) FROM   tablename GROUP BY name;
 ```
 
 # 8.事务
 
-```javascript
+```sql
 BEGIN 开始一个事务
 ROLLBACK 事务回滚
 COMMIT 事务确认
@@ -169,7 +169,7 @@ COMMIT 事务确认
 
 # 9.索引
 
-```javascript
+```sql
 /*创建表的时候指定*/
 CREATE TABLE mytable(  
 ID INT NOT NULL,   
@@ -178,19 +178,19 @@ INDEX [indexName] (username(length))
 );  
 ```
 
-```javascript
+```sql
 /*单独指定*/
 CREATE INDEX indexName ON mytable(username(length)); 
 ```
 
-```javascript
+```sql
 /*修改表结构(添加索引)*/
 ALTER table tableName ADD INDEX indexName(columnName)
 ```
 
 删除索引的语法
 
-```javascript
+```sql
 DROP INDEX [indexName] ON mytable; 
 ```
 
@@ -199,19 +199,19 @@ DROP INDEX [indexName] ON mytable;
 它与前面的普通索引类似，不同的就是：索引列的值必须唯一，但允许有空值。如果是组合索引，则列值的组合必须唯一。它有以下几种创建方式： 
 创建索引
 
-```javascript
+```sql
 CREATE UNIQUE INDEX indexName ON mytable(username(length)) 
 ```
 
 修改表结构
 
-```javascript
+```sql
 ALTER table mytable ADD UNIQUE [indexName] (username(length))
 ```
 
 创建表的时候直接指定
 
-```javascript
+```sql
 CREATE TABLE mytable(  
 ID INT NOT NULL,   
 username VARCHAR(16) NOT NULL,  
@@ -223,7 +223,7 @@ UNIQUE [indexName] (username(length))
 
 创建
 
-```javascript
+```sql
 　　CREATE [AGGREGATE] FUNCTION function_name(parameter_name type,
     　[parameter_name type,...])
 　
@@ -234,13 +234,13 @@ UNIQUE [indexName] (username(length))
 
 删除
 
-```javascript
+```sql
 DROP FUNCTION function_name
 ```
 
 示例
 
-```javascript
+```sql
 DELIMITER //  /*这句话设置//为sql语句结束符，更改原先的; */
 CREATE FUNCTION addTwoNumber(x SMALLINT UNSIGNED, Y SMALLINT UNSIGNED) 
 RETURNS SMALLINT
@@ -258,7 +258,7 @@ END//
 语法 
 `CREATE PROCEDURE  过程名([[IN|OUT|INOUT] 参数名 数据类型[,[IN|OUT|INOUT] 参数名 数据类型&hellip;]])  [特性 ...]  过程体`
 
-```javascript
+```sql
 DELIMITER // /*这句话设置//为sql语句结束符，更改原先的; */
   CREATE PROCEDURE myproc(OUT s int)
     BEGIN
