--- a/2018/2018-04-03-破解智慧树视频弹题及实现自动播放下一节.md
+++ b/2018/2018-04-03-破解智慧树视频弹题及实现自动播放下一节.md
@@ -65,4 +65,4 @@ var fa=$("body");
         });  
 ```
 
->推荐阅读：[破解超星泛雅网课实现自动播放下一节](https://www.cnblogs.com/yueshutong/p/9634322.html)
+>推荐阅读：破解超星泛雅网课实现自动播放下一节
