--- a/2018/2018-04-04-Java实现一个简单的加密解密方法.md
+++ b/2018/2018-04-04-Java实现一个简单的加密解密方法.md
@@ -14,7 +14,7 @@ content，pass均为String类型 content为明文，pass为加密口令，cipher
 
 （对代码公开，对密码保密）
 
-```javascript
+```java
 /**
  * 时间：2007-11-14 
  * yster@foxmail.com
