--- a/2018/2018-05-02-Ajax跨越问题原因分析与解决思路.md
+++ b/2018/2018-05-02-Ajax跨越问题原因分析与解决思路.md
@@ -40,7 +40,7 @@ XHR：不使用XHR，使用JSONP，有很多弊端，无法满足现在的开发
 
 jsonp.php 文件代码
 
-```javascript
+```php
 <?php
 header('Content-type: application/json');
 //获取回调函数名
@@ -54,7 +54,7 @@ echo $jsoncallback . "(" . $json_data . ")";
 
 ##### 2.客户端
 
-```javascript
+```html
 <!DOCTYPE html>
 <html>
 <head>
