--- a/2018/2018-05-15-Shiro安全框架入门笔记.md
+++ b/2018/2018-05-15-Shiro安全框架入门笔记.md
@@ -6,7 +6,7 @@ date: 2018-05-15 18:28:00
 
 ## 1.simpleRealmTest
 
-```javascript
+```java
 package cn.realm;
 
 import org.apache.shiro.SecurityUtils;
@@ -57,7 +57,7 @@ public class simpleRealmTest {
 
 user.ini
 
-```javascript
+```java
 [users]
 \#提供了对用户/密码及其角色的配置，用户名=密码，角色1，角色2
 Mark=123456,admin
@@ -66,7 +66,7 @@ Mark=123456,admin
 admin=user:delete
 ```
 
-```javascript
+```java
 package cn.realm;
 
 import org.apache.shiro.SecurityUtils;
@@ -109,7 +109,7 @@ public class IniRealmTest {
 
 ## 3.JdbcRealmTest
 
-```javascript
+```java
 package cn.realm;
 
 import org.apache.shiro.SecurityUtils;
@@ -172,7 +172,7 @@ public class JdbcRealmTest {
 
 ## 4.自定义CustomRealm
 
-```javascript
+```java
 package cn.realm;
 
 import java.util.HashMap;
@@ -256,7 +256,7 @@ public class CustomRealm extends AuthorizingRealm {
 }
 ```
 
-```javascript
+```java
 package cn.realm;
 
 import org.apache.shiro.SecurityUtils;
