--- a/2018/2018-05-29-SpringMVC自定义403404500状态码返回页面.md
+++ b/2018/2018-05-29-SpringMVC自定义403404500状态码返回页面.md
@@ -6,7 +6,7 @@ date: 2018-05-29 23:16:00
 
 >*  HTTP状态码干货：[http://tool.oschina.net/commons?type=5](http://tool.oschina.net/commons?type5)
 
-```javascript
+```java
 
 import org.springframework.boot.web.servlet.error.ErrorController;
 import org.springframework.http.MediaType;
