--- a/2018/2018-05-31-一看就懂的Mybatis框架入门笔记.md
+++ b/2018/2018-05-31-一看就懂的Mybatis框架入门笔记.md
@@ -19,7 +19,7 @@ mysql-connector-java-5.1.10-bin.jar     数据库访问
 
 在resources下，新建Configuration.xml
 
-```javascript
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE configuration PUBLIC "-//mybatis.org//DTD Config 3.0//EN" "http://mybatis.org/dtd/mybatis-3-config.dtd">
 <configuration>
@@ -57,7 +57,7 @@ mysql-connector-java-5.1.10-bin.jar     数据库访问
 
 示例：
 
-```javascript
+```java
 package com.zyzpp.model;
 
 public class User {
@@ -76,7 +76,7 @@ public class User {
 
 示例：
 
-```javascript
+```java
 package com.zyzpp.inter;
 
 public interface IUserOperation {
@@ -98,7 +98,7 @@ public interface IUserOperation {
 
 说白了，就是实现上步接口方法
 
-```javascript
+```java
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE mapper
     PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN"
@@ -226,7 +226,7 @@ public interface IUserOperation {
 
 # 5.开始使用
 
-```javascript
+```java
 import java.io.Reader;
 import org.apache.ibatis.io.Resources;
 import org.apache.ibatis.session.SqlSession;
