--- a/2018/2018-07-23-Netty入门三之web服务器.md
+++ b/2018/2018-07-23-Netty入门三之web服务器.md
@@ -13,7 +13,7 @@ date: 2018-07-23 15:19:00
 
 ### Maven依赖
 
-```javascript
+```xml
         <!-- Netty -->
         <dependency>
             <groupId>io.netty</groupId>
@@ -26,7 +26,7 @@ date: 2018-07-23 15:19:00
 
 关于启动类，需要我们做的就是自定义端口以及继承ChannelInitializer类。
 
-```javascript
+```java
 /**
  * Netty服务器启动
  * Create by yster@foxmail.com 2018-05-04
@@ -56,7 +56,7 @@ public class HttpServerStartup {
 
 ## 二：信道初始化
 
-```javascript
+```java
 /**
  * 信道初始化
  * Create by yster@foxmail.com 2018-05-04
@@ -85,7 +85,7 @@ public class MyServerInitializer extends ChannelInitializer<SocketChannel> {
 
 ## 三：绑定处理程序中的信道
 
-```javascript
+```java
 /**
  * 绑定处理程序中的简单通道
  * Create by yster@foxmail.com 2018-05-04
