--- a/2019/2019-01-03-JenKins自动化构建部署流程参考.md
+++ b/2019/2019-01-03-JenKins自动化构建部署流程参考.md
@@ -179,6 +179,6 @@ Jenkins 使用天气图标代表执行结果
 ![](./20190103JenKins自动化构建部署流程参考/1136672-20190103155425824-1250590960.png)
 
 
-## 我参考的文章
+## 参考文章
 
 [https://blog.csdn.net/m1126m/article/details/78556359](https://blog.csdn.net/m1126m/article/details/78556359)
