--- a/2018/2018-02-06-Java之文本文件的创建和读取含IO流操作.md
+++ b/2018/2018-02-06-Java之文本文件的创建和读取含IO流操作.md
@@ -2,8 +2,7 @@
 title: Java之文本文件的创建和读取（含IO流操作）
 date: 2018-02-06 22:47:00
 ---
-###### 工具类：对文件的读取，创建。直接复制拿来用！
-
+工具类：对文件的读取，创建。直接复制拿来用！
 
 ```java
 package cn.zyzpp.util;
@@ -53,7 +52,6 @@ public class TxtUtil {
      * 写入Txt
      * @param path
      * @param txt
-     * @throws IOException
      */
     public static boolean writeFile(String path, String txt) {
         // 相对路径，如果没有则要建立一个新的path文件
