--- a/2018/2018-02-09-Java模拟登录带验证码的教务系统原理详解.md
+++ b/2018/2018-02-09-Java模拟登录带验证码的教务系统原理详解.md
@@ -4,23 +4,21 @@ date: 2018-02-09 20:50:00
 ---
 # 一：原理
 
->*  客户端访问服务器，服务器通过Session对象记录会话，服务器可以指定一个唯一的session ID作为cookie来代表每个客户端，用来识别这个客户端接下来的请求。
->*  我们通过Chrome浏览器进行网页访问时，服务器会在我们第一次请求时就建立会话生成Session对象，然后给我们的浏览器返回该Session ID，并把Session的ID保存在客户机的Cookie中，如图：
->*  我们的每次请求都带上我们的**Cookie**,就可以实现会话状态的保持。
+客户端访问服务器，服务器通过Session对象记录会话，服务器可以指定一个唯一的session ID作为cookie来代表每个客户端，用来识别这个客户端接下来的请求。
+我们通过Chrome浏览器进行网页访问时，服务器会在我们第一次请求时就建立会话生成Session对象，然后给我们的浏览器返回该Session ID，并把Session的ID保存在客户机的Cookie中，如图：
+我们的每次请求都带上我们的**Cookie**,就可以实现会话状态的保持。
 
----
 
 ![](./20180209Java模拟登录带验证码的教务系统原理详解/1136672-20190623123702196-673497496.png)
 
----
 
 # 二：代码
 
->*  Jsoup应该是Java最简单的网页解析框架
->*  下载地址：[https://jsoup.org/download](https://jsoup.org/download)
->*  该实例以强智教务系统为例：[http://jwxt.qlu.edu.cn](http://jwxt.qlu.edu.cn)
+> Jsoup应该是Java最简单的网页解析框架
+> 下载地址：[https://jsoup.org/download](https://jsoup.org/download)
+> 该实例以强智教务系统为例：[http://jwxt.qlu.edu.cn](http://jwxt.qlu.edu.cn)
 
-```javascript
+```java
 package cn.zyzpp.eduCookie;
 
 import java.io.IOException;
@@ -132,7 +130,7 @@ public class JsoupSafeCode {
 
 继续：
 
-```javascript
+```java
 package cn.zyzpp.eduCookie;
 
 import java.io.File;
@@ -169,17 +167,13 @@ public class Util {
 }
 ```
 
----
-
 # 后记
 
 在模拟登陆该教务系统时，笔者观察到该教务系统还有一个不需要验证码即可登陆的网址：[http://jwxt.qlu.edu.cn/jsxsd/xsxk/xklc_list](http://jwxt.qlu.edu.cn/jsxsd/xsxk/xklc_list)，不过这个需要把用户名和密码通过JS算法进行前端加密合成为encoded字符串，如下
 
-```javascript
+```java
 String encoded = playJs(username) + "%%%" + playJs(password);
 ```
 
 然后直接带参POST即可。 
-具体的playJs()方法参考我的另一篇博客：[Java执行JavaScript脚本破解encodeInp()加密](https://www.cnblogs.com/yueshutong/p/9381592.html)
-
----
+具体的playJs()方法参考我的另一篇博客：Java执行JavaScript脚本破解encodeInp()加密
