--- a/2018/2018-04-12-任务调度工具Quartz入门笔记.md
+++ b/2018/2018-04-12-任务调度工具Quartz入门笔记.md
@@ -7,19 +7,19 @@ date: 2018-04-12 20:57:00
 1）官网下载：[http://www.quartz-scheduler.org/downloads/](http://www.quartz-scheduler.org/downloads/) 
 2）Maven
 
-```javascript
-        <dependency>
-            <groupId>org.quartz-scheduler</groupId>
-            <artifactId>quartz</artifactId>
-            <version>2.2.1</version>
-        </dependency>
+```xml
+<dependency>
+    <groupId>org.quartz-scheduler</groupId>
+    <artifactId>quartz</artifactId>
+    <version>2.2.1</version>
+</dependency>
 ```
 
 # 二，实例
 
 1.先定义一个作业任务类，写我们的执行代码
 
-```javascript
+```java
 package cn.zyzpp.quartz.demo;
 import java.text.SimpleDateFormat;
 import java.util.Date;
@@ -84,7 +84,7 @@ public class HelloJob implements Job {
 
 2.
 
-```javascript
+```java
 package cn.zyzpp.quartz.demo;
 
 import java.text.SimpleDateFormat;
@@ -212,7 +212,7 @@ public class QuartzTest {
 
 ### 3）集成Spring
 
-```javascript
+```xml
    <!-- JobDetail -->
     <!-- （1）simpleJobDetail : 定义任务类和任务方法-->
     <bean id="simpleJobDetail"
@@ -267,7 +267,7 @@ public class QuartzTest {
 
 1.MyBean.java
 
-```javascript
+```java
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
@@ -286,7 +286,7 @@ public class MyBean {
 
 2.AnotherBean.java
 
-```javascript
+```java
 
 import org.springframework.stereotype.Component;
 
@@ -300,7 +300,7 @@ public class AnotherBean {
 
 3.FirstScheduledJob.java
 
-```javascript
+```java
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
