--- a/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
+++ b/_posts/2019/2019-06-23-史上最全面的Neo4j使用指南.md
@@ -4,7 +4,7 @@ title: 史上最全面的Neo4j使用指南
 date: 2019-06-23 10:04:00
 author: 薛勤
 ---
-> Create by yster@foxmail.com 2018-7-10
+> Create by github@yueshutong 2018-7-10
 >
 > W3Cschool文档：https://www.w3cschool.cn/neo4j/neo4j_features_advantages.html
 >
