替换所有文章链接

--- a/_posts/2018/2018-05-31-一看就懂的Mybatis框架入门笔记.md
+++ b/_posts/2018/2018-05-31-一看就懂的Mybatis框架入门笔记.md
@@ -5,8 +5,8 @@ date: 2018-05-31 22:42:00
 author: 薛勤
 ---
 *  本篇为初学Mybatis框架时的入门笔记，整理发出
-*  [Spring集成Mybatis](https://www.cnblogs.com/yueshutong/p/9381590.html)
-*  [SpringBoot集成Mybatis](https://www.cnblogs.com/yueshutong/p/9381549.html)
+*  [Spring集成Mybatis](/)
+*  [SpringBoot集成Mybatis](/)
 
 # 简介
 
@@ -413,4 +413,5 @@ public class Test {
     }
 }
 ```
+
 
