--- a/_posts/2018/2018-09-12-破解超星泛雅网课实现自动播放下一节.md
+++ b/_posts/2018/2018-09-12-破解超星泛雅网课实现自动播放下一节.md
@@ -4,7 +4,7 @@ title: 破解超星泛雅网课实现自动播放下一节
 date: 2018-09-12 13:40:00
 author: 薛勤
 ---
-又到一年刷课季，如果你的课程在智慧树，请看我写的另一篇：[破解智慧树视频弹题及实现自动播放下一节](https://www.cnblogs.com/yueshutong/p/9381575.html)
+又到一年刷课季，如果你的课程在智慧树，请看我写的另一篇：[破解智慧树视频弹题及实现自动播放下一节](/)
 
 最近选了门超星泛雅的课程，连鼠标都不能乱动呀，动不动播放暂停。身为计科的学生，怎么能被这难倒？
 
@@ -83,4 +83,5 @@ btn.click(function () {
 **最终效果**：
 
 ![](./20180912破解超星泛雅网课实现自动播放下一节/1136672-20180912135541678-1936898309.png)
+
 
