--- a/_posts/2018/2018-09-19-Java多线程核心技术五单例模式与多线程.md
+++ b/_posts/2018/2018-09-19-Java多线程核心技术五单例模式与多线程.md
@@ -625,14 +625,15 @@ public class MyObject {
 
 ## 扩展
 
-[Java多线程编程核心技术(一)Java多线程技能](https://www.cnblogs.com/yueshutong/p/9575698.html)
+[Java多线程编程核心技术(一)Java多线程技能](/)
 
-[Java多线程编程核心技术(二)对象及变量的并发访问](https://www.cnblogs.com/yueshutong/p/9655806.html)
+[Java多线程编程核心技术(二)对象及变量的并发访问](/)
 
-[Java多线程编程核心技术(三)多线程通信](https://www.cnblogs.com/yueshutong/p/9674166.html)
+[Java多线程编程核心技术(三)多线程通信](/)
 
-[Java多线程核心技术(四)Lock的使用](https://www.cnblogs.com/yueshutong/p/9677342.html)
+[Java多线程核心技术(四)Lock的使用](/)
 
 
-[Java多线程核心技术(六)线程组与线程异常](https://www.cnblogs.com/yueshutong/p/9681041.html)
+[Java多线程核心技术(六)线程组与线程异常](/)
+
 
