--- a/_posts/2019/2019-01-03-JenKins自动化构建部署流程参考.md
+++ b/_posts/2019/2019-01-03-JenKins自动化构建部署流程参考.md
@@ -150,7 +150,7 @@ Jenkins 使用天气图标代表执行结果
 
 点击之后，设置构建后的war包相对路径，context path 是访问的域名xxx.cn/demo
 
-然后是 Tomcat manager 的用户名和密码（配置参考：[https://www.cnblogs.com/yueshutong/p/10184022.html](https://www.cnblogs.com/yueshutong/p/10184022.html)）
+然后是 Tomcat manager 的用户名和密码（配置参考：[/](/)）
 
 最后是Tomcat的路径。
 
@@ -184,4 +184,5 @@ Jenkins 使用天气图标代表执行结果
 ## 参考文章
 
 [https://blog.csdn.net/m1126m/article/details/78556359](https://blog.csdn.net/m1126m/article/details/78556359)
+
 
