--- a/_posts/2019/2019-04-30-Lua脚本语言快速入门手册.md
+++ b/_posts/2019/2019-04-30-Lua脚本语言快速入门手册.md
@@ -195,9 +195,10 @@ print(contact("hello ", "world"))
 
 [Lua 教程：菜鸟教程](https://www.runoob.com/lua/lua-tutorial.html)
 
-[OpenResty入门之使用Lua开发Nginx插件](https://www.cnblogs.com/yueshutong/p/10792425.html)
+[OpenResty入门之使用Lua开发Nginx插件](/)
 
-[Redis进阶之使用Lua脚本自定义Redis命令](https://www.cnblogs.com/yueshutong/p/10785905.html)
+[Redis进阶之使用Lua脚本自定义Redis命令](/)
 
-[SpringBoot通过RedisTemplate执行Lua脚本](https://www.cnblogs.com/yueshutong/p/10786163.html)
+[SpringBoot通过RedisTemplate执行Lua脚本](/)
+
 
