--- a/_posts/2019/2019-09-19-位运算实现加减乘除四则运算Java.md
+++ b/_posts/2019/2019-09-19-位运算实现加减乘除四则运算Java.md
@@ -4,7 +4,7 @@ title: 位运算实现加减乘除四则运算（Java）
 date: 2019-09-19 10:24:00
 author: 薛勤
 ---
-> 本文是继[《一文了解有趣的位运算》](https://www.cnblogs.com/yueshutong/p/11244534.html)的第二篇文章.
+> 本文是继[《一文了解有趣的位运算》](/)的第二篇文章.
 
 我们知道，计算机最基本的操作单元是字节(byte)，一个字节由8个位(bit)组成，一个位只能存储一个0或1，其实也就是高低电平。无论多么复杂的逻辑、庞大的数据、酷炫的界面，最终体现在计算机最底层都只是对0101的存储和运算。因此，了解位运算有助于提升我们对计算机底层操作原理的理解。
 
@@ -208,4 +208,5 @@ public static int[] divide(int a, int b) {
     return new int[]{N, C};
 }
 ```
+
 
