--- a/_posts/2018/2018-08-28-聊聊我是如何自学Java两年的.md
+++ b/_posts/2018/2018-08-28-聊聊我是如何自学Java两年的.md
@@ -6,7 +6,7 @@ author: 薛勤
 ---
 2019-10-16：
 
-今天一看，没想到文章访问量已经1万了，对此，我有点歉意，因为这篇文章并不是写的多么好，也没有写的太详细，所以，我之后又写了一篇文章，详细讲述了我的大学生活以及拿到百度网易offer的经历，请大家移步看下吧！《[我一个二本大学是如何拿到百度、网易大厂offer的](https://www.cnblogs.com/yueshutong/p/10564298.html)》
+今天一看，没想到文章访问量已经1万了，对此，我有点歉意，因为这篇文章并不是写的多么好，也没有写的太详细，所以，我之后又写了一篇文章，详细讲述了我的大学生活以及拿到百度网易offer的经历，请大家移步看下吧！《[我一个二本大学是如何拿到百度、网易大厂offer的](/)》
 
 ---
 
@@ -92,4 +92,5 @@ author: 薛勤
 实现原理还是得懂得，这东西不止面试会用到，而且在你以后自己开发项目的时候都是你的底蕴。
 
 最后，我只是一名未进入工厂的萌新，说的不好，大家多多担待~~
+
 
