--- a/_posts/2018/2018-09-16-Java多线程编程核心技术二对象及变量的并发访问.md
+++ b/_posts/2018/2018-09-16-Java多线程编程核心技术二对象及变量的并发访问.md
@@ -1239,13 +1239,14 @@ Thread end: Thread-A
 
 ## 扩展
 
-[Java多线程编程核心技术(一)Java多线程技能](https://www.cnblogs.com/yueshutong/p/9575698.html)
+[Java多线程编程核心技术(一)Java多线程技能](/)
 
-[Java多线程编程核心技术(三)多线程通信](https://www.cnblogs.com/yueshutong/p/9674166.html)
+[Java多线程编程核心技术(三)多线程通信](/)
 
-[Java多线程核心技术(四)Lock的使用](https://www.cnblogs.com/yueshutong/p/9677342.html)
+[Java多线程核心技术(四)Lock的使用](/)
 
-[Java多线程核心技术(五)单例模式与多线程](https://www.cnblogs.com/yueshutong/p/9678050.html)
+[Java多线程核心技术(五)单例模式与多线程](/)
 
-[Java多线程核心技术(六)线程组与线程异常](https://www.cnblogs.com/yueshutong/p/9681041.html)
+[Java多线程核心技术(六)线程组与线程异常](/)
+
 
