--- a/_posts/2018/2018-09-19-Java多线程核心技术四Lock的使用.md
+++ b/_posts/2018/2018-09-19-Java多线程核心技术四Lock的使用.md
@@ -777,14 +777,15 @@ lock.writeLock().lock();
 
 ## 扩展
 
-[Java多线程编程核心技术(一)Java多线程技能](https://www.cnblogs.com/yueshutong/p/9575698.html)
+[Java多线程编程核心技术(一)Java多线程技能](/)
 
-[Java多线程编程核心技术(二)对象及变量的并发访问](https://www.cnblogs.com/yueshutong/p/9655806.html)
+[Java多线程编程核心技术(二)对象及变量的并发访问](/)
 
-[Java多线程编程核心技术(三)多线程通信](https://www.cnblogs.com/yueshutong/p/9674166.html)
+[Java多线程编程核心技术(三)多线程通信](/)
 
 
-[Java多线程核心技术(五)单例模式与多线程](https://www.cnblogs.com/yueshutong/p/9678050.html)
+[Java多线程核心技术(五)单例模式与多线程](/)
 
-[Java多线程核心技术(六)线程组与线程异常](https://www.cnblogs.com/yueshutong/p/9681041.html)
+[Java多线程核心技术(六)线程组与线程异常](/)
+
 
