--- a/_posts/2019/2019-08-10-你不得不知的Golang线程模型转载.md
+++ b/_posts/2019/2019-08-10-你不得不知的Golang线程模型转载.md
@@ -3,7 +3,7 @@ layout: post
 title: 你不得不知的GoLang线程模型 [转载]
 date: 2019-08-10 15:54:00
 author: 薛勤
-tags: [线程,GoLang]
+tags: [多线程,GoLang]
 ---
 > 原著：翟陆续（加多) 资深Java , 著Java并发编程之美
 
