--- a/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
+++ b/_posts/2018/2018-08-09-Linux下如何让jar包程序在后台一直执行.md
@@ -3,7 +3,7 @@ layout: post
 title: Linux下如何让jar包程序在后台一直执行
 date: 2018-08-09 21:15:00
 author: 薛勤
-tags: [Java,Linux]
+tags: [Java]
 ---
 ### shell命令
 
@@ -42,4 +42,5 @@ exit
 vi nohub.out //新建log文件
 chmod 777 ./nohub.out //赋予读+写+执行权限
 ```
+
 
