--- a/_posts/2020/2020-01-31-利用js权限在博客园刷粉刷赞.md
+++ b/_posts/2020/2020-01-31-利用js权限在博客园刷粉刷赞.md
@@ -3,7 +3,7 @@ layout: post
 title: 利用 js 权限在博客园刷粉、刷赞
 date: 2020-01-31 21:05:00
 author: 薛勤
-tags: JavaScript
+tags: [JavaScript]
 ---
 
 真的，不要用 js 权限在博客园刷粉、刷赞，虽然很容易。但是博客园开放了 js 权限是希望我们的个人博客可以更个人、更个性。说实话，你刷关注屁用没有，哪有人去看，刷赞倒是有用，可以上首页推荐，不过文章写的不咋滴上去不是遭喷吗？本文就这两个功能随便聊聊技术上的问题。
@@ -64,6 +64,4 @@ $(function(){
 ### 声明
 
 本文的观点很支棱，不支持刷赞刷关注！
-
-
 
