--- a/_posts/2019/2019-03-26-我的面试宝典这些不会的话就别去面试了.md
+++ b/_posts/2019/2019-03-26-我的面试宝典这些不会的话就别去面试了.md
@@ -101,7 +101,6 @@ ACID四个特性懂吧？让你解释也没问题吧？
 
 后面，我一是想要分享自己对一些知识的感悟，一方面就是介绍一部分开发上的技术技能。
 
-最近确实加了不少同学，我也尽力给了帮助和指导。但是我还有工作要做，所以建议大家尽量前往我的知识星球（薛勤的博客）一起进行交流。
-
+最近确实加了不少同学，我也尽力给了帮助和指导。但是我还有工作要做，所以建议大家尽量前往我的知识星球（薛勤的星球）一起进行交流。
 
 如果你觉得不错，可以顺手点一个好看，甚至给我赞赏，那将会更加的鼓励我更好的创作。
