--- a/_posts/2020/2020-02-03-逐行解读HashMap源码.md
+++ b/_posts/2020/2020-02-03-逐行解读HashMap源码.md
@@ -8,9 +8,9 @@ tags: Java
 
 ## 一、写在前面
 
-相信读者也看过了不少讲解 HashMap 源码的文章了，笔者认为，一切脱离源码去讲原理的都是泛泛而谈。一些所谓的原理大都是阅读源码之后的个人概括，这些概括参差不齐，再加上没有阅读源码，读者们是很难有切身体会的。正因如此，笔者逐行分析了 HashMap 的源码后，开启了本场 Chat。
+相信读者也看过了不少讲解 HashMap 源码的文章了，笔者认为，一切脱离源码去讲原理的都是泛泛而谈。一些所谓的原理大都是阅读源码之后的个人概括，这些概括参差不齐，再加上没有阅读源码，读者们是很难有切身体会的。正因如此，笔者逐行分析了 HashMap 的源码后，写下了本篇文章。
 
-笔者在阅读 HashMap 源码的时候，曾对每个内部属性，每个内部方法和方法调用逻辑做了简要注释，但在整理成文的时候，还是遇到了略微的困难。对于一些内部属性的解释，需要结合它在一些方法的使用中发挥的作用来综合说明，笔者打算按照从浅到深的顺序，先带读者熟悉HashMap的宏观设计思想，再通读一遍源码，然后讲解源码的设计细节。要让读者边看文字边对照源码进行学习，形成自己的领悟和体会，避免造成笔者一人的泛泛而谈。
+笔者在阅读 HashMap 源码的时候，曾对每个内部属性，每个内部方法和方法调用逻辑做了简要注释，但在整理成文的时候，还是遇到了略微的困难。对于一些内部属性的解释，需要结合它在一些方法的使用中发挥的作用来综合说明，笔者打算按照从浅到深的顺序，先带读者熟悉 HashMap 的宏观设计思想，再通读一遍源码，然后讲解源码的设计细节。要让读者边看文字边对照源码进行学习，形成自己的领悟和体会，避免造成笔者一人的泛泛而谈。
 
 无论自己的领悟是深是浅，终归是自己的，无论别人的领悟多么高深，那也是别人的。希望每个读者都能有自己的收获和体会。
 
@@ -46,7 +46,7 @@ Map m = Collections.synchronizedMap(new HashMap(...));
 ```
 由所有此类的“集合视图方法”所返回的迭代器都是快速失败 的：在迭代器创建之后，如果从结构上对映射进行修改，除非通过迭代器自身的 remove 或 add 方法，其他任何时间任何方式的修改，迭代器都将抛出 ConcurrentModificationException。因此，面对并发的修改，迭代器很快就会完全失败，而不冒在将来不确定的时间任意发生不确定行为的风险。
 
-注意，迭代器的快速失败行为不能得到保证，一般来说，存在不同步的并发修改时，不可能作出任何坚决的保证。快速失败迭代器尽最大努力抛出 ConcurrentModificationException。因此，编写依赖于此异常程序的方式是错误的，正确做法是：迭代器的快速失败行为应该仅用于检测程序错误。
+注意，迭代器的快速失败（fast-fail）行为不能得到保证，一般来说，存在不同步的并发修改时，不可能作出任何坚决的保证。快速失败迭代器尽最大努力抛出 ConcurrentModificationException。因此，编写依赖于此异常程序的方式是错误的，正确做法是：迭代器的快速失败行为应该仅用于检测程序错误。
 
 此类是 Java Collections Framework 的成员。
 
@@ -164,7 +164,7 @@ HashMap 的内部 Node 类型的数组，属性名为 table。
 ```java
 transient int modCount;
 ```
-该字段起标记作用，值是对该 HashMap 进行结构修改的次数，主要用于迭代器访问时检测 HashMap 是否因为删除等其它操作内部机构发生变化。
+该字段起标记作用，值是对该 HashMap 进行结构修改的次数，主要用于迭代器访问时检测 HashMap 是否因为删除等其它操作内部机构发生变化，从而支撑起所谓的快速失败行为。
 
 ```java
 transient Set<Map.Entry<K,V>> entrySet;
@@ -726,4 +726,3 @@ final void treeify(Node<K,V>[] tab) {
 
 ## 十六、TreeNode.balanceInsertion(TreeNode root,TreeNode x)
 
-平衡红黑树..（待完成）
