--- a/_posts/2020/2012-02-17-我一个二本大学是如何拿到阿里offer的.md
+++ b/_posts/2020/2012-02-17-我一个二本大学是如何拿到阿里offer的.md
@@ -9,10 +9,13 @@ tags:
   - 面经
 ---
 
-
-## 01：终于步入大学
+>作者：薛勤，互联网从业者，编程爱好者。
+>
+>本文首发自公众号：代码艺术（ID：onblog）未经许可，不可转载
 
 ![](https://i.loli.net/2020/02/07/M32G8ZDiUt5g4He.png)
+
+## 01：终于步入大学
 
 我既没有跨过山和大海，也没有穿过人山人海，我就是我，一个普通本科大学生。身为读者的你，关注了我，自然是想获取知识与经验，我所能分享的，也只有我的一些知识与经历。
 
