--- a/_posts/2020/2012-02-17-我一个二本大学是如何拿到阿里offer的.md
+++ b/_posts/2020/2012-02-17-我一个二本大学是如何拿到阿里offer的.md
@@ -13,7 +13,7 @@ tags:
 >
 >本文首发自公众号：代码艺术（ID：onblog）未经许可，不可转载
 
-![](https://i.loli.net/2020/02/07/M32G8ZDiUt5g4He.png)
+![](./20120217我一个二本大学是如何拿到阿里offer的/334c309d-b5f3-4f5a-8170-06fdae7a1cd7.png)
 
 ## 01：终于步入大学
 
